--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- Your Custom CSS -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Page-only tweaks to align spacing with fixed navbar -->
   <style>
@@ -39,8 +39,8 @@
   <!-- Header Navigation (aligned with your other pages) -->
   <header class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="../index.html">
-        <img src="../images/logos/jata.png" alt="JATA Logo" height="40" class="me-2">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logos/jata.png" alt="JATA Logo" height="40" class="me-2">
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -51,16 +51,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="dashboard.html" aria-current="page">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../about.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -304,7 +304,7 @@
             <!-- Profile header -->
             <div class="col-12">
               <div class="d-flex flex-column flex-md-row align-items-start align-items-md-center gap-3 p-3 border rounded-3 bg-light">
-                <img id="modal-photo" src="/images/placeholders/avatar.jpg" alt="Student photo" class="rounded-circle border" style="width: 70px; height: 70px; object-fit: cover;">
+                <img id="modal-photo" src="images/placeholders/avatar.jpg" alt="Student photo" class="rounded-circle border" style="width: 70px; height: 70px; object-fit: cover;">
                 <div class="flex-grow-1">
                   <div class="fw-bold fs-5" id="modal-full-name"></div>
                   <div class="text-muted small">
@@ -504,7 +504,7 @@
             <h5>Jigawa Agricultural Commercialization Workforce Scholarship</h5>
             <p>Empowering Jigawa State&apos;s Agricultural Transformation Through International Education</p>
             <div class="footer-brand mt-3">
-              <img src="../images/logos/jata.png" alt="JATA Logo" height="40">
+              <img src="images/logos/jata.png" alt="JATA Logo" height="40">
             </div>
           </div>
         </div>
@@ -513,10 +513,10 @@
           <div class="footer-widget">
             <h5>Quick Links</h5>
             <ul class="list-unstyled footer-links">
-              <li><a href="../index.html" class="text-white text-decoration-none"><i class="bi bi-house-door me-2"></i>Home</a></li>
+              <li><a href="index.html" class="text-white text-decoration-none"><i class="bi bi-house-door me-2"></i>Home</a></li>
               <li><a href="dashboard.html" class="text-white text-decoration-none"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a></li>
-              <li><a href="../about.html" class="text-white text-decoration-none"><i class="bi bi-info-circle me-2"></i>About</a></li>
-              <li><a href="../contact.html" class="text-white text-decoration-none"><i class="bi bi-envelope me-2"></i>Contact</a></li>
+              <li><a href="about.html" class="text-white text-decoration-none"><i class="bi bi-info-circle me-2"></i>About</a></li>
+              <li><a href="contact.html" class="text-white text-decoration-none"><i class="bi bi-envelope me-2"></i>Contact</a></li>
             </ul>
           </div>
         </div>
@@ -734,7 +734,7 @@
     }
 
     async function loadStudents() {
-      const dataUrl = "../data/students.JSON";
+      const dataUrl = "data/students.json";
 
       const res = await fetch(dataUrl, { cache: "no-store" });
       if (!res.ok) {
